Added check of correct fill and payment of Bill

--- a/WebContent/resources/text_en.properties
+++ b/WebContent/resources/text_en.properties
@@ -21,6 +21,7 @@ admin.label.unblocked = Not blocked
 admin.button.unblock = Unblock
 admin.label.welcome = Welcome
 admin.label.logout = Logout
+admin.label.msg = Only numbers
 client.label.title = Client room
 client.label.logout = Logout
 client.label.blocked = Blocked
@@ -30,3 +31,4 @@ client.button.fill = Fill
 client.button.pay = Pay
 client.label.welcome = Welcome
 client.label.logout = Logout
+client.label.msg = Only numbers
