--- a/WebContent/resources/text_ua.properties
+++ b/WebContent/resources/text_ua.properties
@@ -21,6 +21,7 @@ admin.label.unblocked = \u0420\u043E\u0437\u0431\u043B\u0430\u043A\u043E\u0432\u
 admin.button.unblock = \u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
 admin.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 admin.label.logout = \u0412\u0438\u0439\u0442\u0438
+admin.label.msg = \u0422\u0456\u043B\u044C\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 client.label.title = \u041A\u0456\u043C\u043D\u0430\u0442\u0430 \u043A\u043B\u0456\u0454\u043D\u0442\u0430
 client.label.logout = \u0412\u0438\u0439\u0442\u0438
 client.label.blocked = \u0417\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0430
@@ -30,3 +31,4 @@ client.button.fill = \u041F\u043E\u043F\u043E\u0432\u043D\u0438\u0442\u0438
 client.button.pay = \u0421\u043F\u043B\u0430\u0442\u0438\u0442\u0438
 client.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 client.label.logout = \u0412\u0438\u0439\u0442\u0438
+client.label.msg = \u0422\u0456\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
